Add Versionamento da API baseado no modelo path/URI & Refatorei Cliente